OpenAPI: Models Complete
